Bug 207215 - KGet refuses to overwrite files
Summary: KGet refuses to overwrite files
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-13 00:38 UTC by Alec Moskvin
Modified: 2009-09-14 15:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alec Moskvin 2009-09-13 00:38:03 UTC
Version:           2.3.1 (using 4.3.1 (KDE 4.3.1), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.31

When trying to update an existing file with a new version, KGet does not permit the user to overwrite it.

Steps to reproduce:
1. Click a link to download and save a file through the Konqueror integration.
2. Click the link again.
3. Click "Save As..."
   KGet asks:
    URL already saved:
    http://example.com/schedule.pdf
    Download again?
4. Click "Yes" since you do want to download the latest version.
5. When the Save dialog appears, click on the old file, and click "Save."
6. KGet says:
    A similar file named '/home/alec/schedule.pdf' already exists.
    [ schedule.pdf ]   Suggest new name / Rename / Cancel
   
Expected result:
There should be an "Overwrite" button so that I could replace the file with the new file.
Comment 1 Dario Massarin 2009-09-14 15:01:05 UTC
SVN commit 1023304 by dario:

Prompt the user for the overwrite option

BUG: 207215


 M  +5 -2      kget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023304