Prompt the user for the overwrite option

BUG: 207215

svn path=/trunk/KDE/kdenetwork/kget/; revision=1023304